--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
 
 [dependencies]
+dotenv = "0.15.0"
 main_error = "0.1.0"
+tokio = { version = "0.2", features = ["macros"] }
+warp = "0.2"
 mitemp = { version = "0.1.0", git = "https://github.com/icewind1991/mitemp-rs" }
 
