--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "mitemp-prometheus"
 version = "0.1.0"
 authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
+description = "Expose Xiaomi MI Temperature and Humidity Sensor to prometheus"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 dotenv = "0.15.0"
