--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 [dependencies]
 dotenv = "0.15.0"
 main_error = "0.1.0"
-tokio = { version = "0.2", features = ["macros"] }
-warp = "0.2"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+warp = "0.3"
 mitemp = { version = "0.2.0", git = "https://github.com/icewind1991/mitemp-rs" }
 
