--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ dotenv = "0.15.0"
 main_error = "0.1.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 warp = "0.3"
-mitemp = "0.3"
+mitemp = "0.3.1"
 tokio-stream = "0.1"
 btleplug = "0.9"
+env_logger = "0.9"
+log = "0.4"
